infra/nexus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
spec:
  rules:
  - host: test.nexus.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-service
            port:
              number: 8081
  tls:
    - hosts:
        - test.nexus.org
      secretName: nexus-tls-secret
